// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/starts/Button renders a button 1`] = `
<button
  class="withStyles-sc-8qn4cd-0 iIYDgp"
  type="primary"
>
  Button
</button>
`;

exports[`components/starts/Button renders a secondary button 1`] = `
<button
  class="withStyles-sc-8qn4cd-0 hAEtoY"
  type="secondary"
>
  Button
</button>
`;

exports[`components/starts/Button renders an external link 1`] = `
<a
  class="withStyles-sc-8qn4cd-0 iIYDgp"
  href="https://google.com"
  rel="noreferrer noopener"
  target="_blank"
  type="primary"
>
  Button
</a>
`;

exports[`components/starts/Button renders an interal link 1`] = `
<a
  class="withStyles-sc-8qn4cd-0 iIYDgp"
  href="/about"
  type="primary"
>
  Button
</a>
`;
